--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -13,9 +13,9 @@
 
     <fragment
         android:id="@+id/nav_gallery"
-        android:name="com.example.gopherway.ui.gallery.GalleryFragment"
+        android:name="com.example.gopherway.ui.savedlocations.SavedLocationsFragment"
         android:label="@string/menu_gallery"
-        tools:layout="@layout/fragment_gallery" />
+        tools:layout="@layout/fragment_saved_locations" />
 
     <fragment
         android:id="@+id/nav_slideshow"
