--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -12,9 +12,9 @@
         tools:layout="@layout/fragment_home" />
 
     <fragment
-        android:id="@+id/nav_gallery"
+        android:id="@+id/nav_saved_locations"
         android:name="com.example.gopherway.ui.savedlocations.SavedLocationsFragment"
-        android:label="@string/menu_gallery"
+        android:label="@string/menu_saved_locations"
         tools:layout="@layout/fragment_saved_locations" />
 
     <fragment
