travel history and saved locations begun

--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -13,9 +13,9 @@
             android:icon="@drawable/ic_menu_gallery"
             android:title="@string/menu_saved_locations" />
         <item
-            android:id="@+id/nav_slideshow"
+            android:id="@+id/nav_travel_history"
             android:icon="@drawable/ic_menu_slideshow"
-            android:title="@string/menu_slideshow" />
+            android:title="@string/menu_travel_history" />
         <item
             android:id="@+id/nav_tools"
             android:icon="@drawable/ic_menu_manage"
