--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -18,10 +18,10 @@
         tools:layout="@layout/fragment_saved_locations" />
 
     <fragment
-        android:id="@+id/nav_slideshow"
-        android:name="com.example.gopherway.ui.slideshow.SlideshowFragment"
-        android:label="@string/menu_slideshow"
-        tools:layout="@layout/fragment_slideshow" />
+        android:id="@+id/nav_travel_history"
+        android:name="com.example.gopherway.ui.travelhistory.TravelHistoryFragment"
+        android:label="@string/menu_travel_history"
+        tools:layout="@layout/fragment_travel_history" />
 
     <fragment
         android:id="@+id/nav_tools"
