--- a/app/src/main/res/values/drawables.xml
+++ b/app/src/main/res/values/drawables.xml
@@ -1,4 +1,7 @@
 <resources xmlns:android="http://schemas.android.com/apk/res/android">
+<item name="ic_menu_home" type="drawable">drawable/ic_menu_home</item>
+<item name="ic_menu_history" type="drawable">drawable/ic_menu_home</item>
+<item name="ic_menu_saved_locations" type="drawable">drawable/ic_menu_home</item>
 <item name="ic_menu_camera" type="drawable">@android:drawable/ic_menu_camera</item>
 <item name="ic_menu_gallery" type="drawable">@android:drawable/ic_menu_gallery</item>
 <item name="ic_menu_slideshow" type="drawable">@android:drawable/ic_menu_slideshow</item>
