--- a/app/src/main/res/layout/activity_display_navigation_options.xml
+++ b/app/src/main/res/layout/activity_display_navigation_options.xml
@@ -8,12 +8,12 @@
 
     <ImageView
         android:id="@+id/imageView3"
-        android:layout_width="405dp"
-        android:layout_height="539dp"
+        android:layout_width="413dp"
+        android:layout_height="452dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:srcCompat="?attr/actionModeBackground"
-        tools:layout_editor_absoluteY="82dp" />
+        tools:layout_editor_absoluteY="169dp" />
 
     <TextView
         android:id="@+id/textView2"
@@ -31,6 +31,7 @@
         android:layout_height="60dp"
         android:layout_marginLeft="32dp"
         android:layout_marginStart="32dp"
+        android:onClick="backButtonClick"
         android:text="Back"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -52,6 +53,7 @@
         android:layout_height="60dp"
         android:layout_marginEnd="32dp"
         android:layout_marginRight="32dp"
+        android:onClick="nextButtonClick"
         android:text="Next"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -64,7 +66,9 @@
         android:layout_height="80dp"
         app:layout_constraintBottom_toTopOf="@+id/imageView3"
         app:layout_constraintEnd_toStartOf="@+id/textView2"
+        app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="1.0"
         app:srcCompat="?attr/actionBarDivider" />
 </androidx.constraintlayout.widget.ConstraintLayout>
