--- a/app/src/main/res/layout/activity_display_navigation_options.xml
+++ b/app/src/main/res/layout/activity_display_navigation_options.xml
@@ -12,18 +12,22 @@
         android:layout_height="452dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:srcCompat="?attr/actionModeBackground"
-        tools:layout_editor_absoluteY="169dp" />
+        app:layout_constraintTop_toBottomOf="@+id/textView2"
+        app:srcCompat="?attr/actionModeBackground" />
 
     <TextView
         android:id="@+id/textView2"
         android:layout_width="318dp"
         android:layout_height="81dp"
+        android:layout_marginTop="32dp"
         android:text="TextView"
+        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
+        android:visibility="visible"
         app:layout_constraintBottom_toTopOf="@+id/imageView3"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="1.0" />
+        app:layout_constraintVertical_bias="1.0"
+        tools:visibility="visible" />
 
     <Button
         android:id="@+id/button2"
@@ -64,6 +68,7 @@
         android:id="@+id/imageView4"
         android:layout_width="92dp"
         android:layout_height="80dp"
+        android:layout_marginTop="32dp"
         app:layout_constraintBottom_toTopOf="@+id/imageView3"
         app:layout_constraintEnd_toStartOf="@+id/textView2"
         app:layout_constraintHorizontal_bias="1.0"
