Add styling to home fragment

--- a/app/src/main/res/layout/activity_display_navigation_options.xml
+++ b/app/src/main/res/layout/activity_display_navigation_options.xml
@@ -8,8 +8,8 @@
 
     <ImageView
         android:id="@+id/imageView3"
-        android:layout_width="413dp"
-        android:layout_height="452dp"
+        android:layout_width="409dp"
+        android:layout_height="356dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView2"
@@ -17,9 +17,8 @@
 
     <TextView
         android:id="@+id/textView2"
-        android:layout_width="318dp"
-        android:layout_height="81dp"
-        android:layout_marginTop="32dp"
+        android:layout_width="298dp"
+        android:layout_height="181dp"
         android:text="TextView"
         android:textAppearance="@style/TextAppearance.AppCompat.Display1"
         android:visibility="visible"
@@ -33,8 +32,10 @@
         android:id="@+id/button2"
         android:layout_width="95dp"
         android:layout_height="60dp"
+        android:layout_marginBottom="32dp"
         android:layout_marginLeft="32dp"
         android:layout_marginStart="32dp"
+        android:layout_marginTop="8dp"
         android:onClick="backButtonClick"
         android:text="Back"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -45,6 +46,8 @@
         android:id="@+id/button3"
         android:layout_width="95dp"
         android:layout_height="60dp"
+        android:layout_marginBottom="32dp"
+        android:layout_marginTop="8dp"
         android:text="More Info"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/button4"
@@ -55,8 +58,10 @@
         android:id="@+id/button4"
         android:layout_width="95dp"
         android:layout_height="60dp"
+        android:layout_marginBottom="32dp"
         android:layout_marginEnd="32dp"
         android:layout_marginRight="32dp"
+        android:layout_marginTop="8dp"
         android:onClick="nextButtonClick"
         android:text="Next"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -66,14 +71,13 @@
 
     <ImageView
         android:id="@+id/imageView4"
-        android:layout_width="92dp"
-        android:layout_height="80dp"
-        android:layout_marginTop="32dp"
+        android:layout_width="98dp"
+        android:layout_height="109dp"
         app:layout_constraintBottom_toTopOf="@+id/imageView3"
         app:layout_constraintEnd_toStartOf="@+id/textView2"
         app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="1.0"
+        app:layout_constraintVertical_bias="0.38"
         app:srcCompat="?attr/actionBarDivider" />
 </androidx.constraintlayout.widget.ConstraintLayout>
