Added weather page with weather api integration

--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -28,10 +28,10 @@
         tools:layout="@layout/fragment_travel_history" />
 
     <fragment
-        android:id="@+id/nav_tools"
-        android:name="com.example.gopherway.ui.tools.ToolsFragment"
-        android:label="@string/menu_tools"
-        tools:layout="@layout/fragment_tools" />
+        android:id="@+id/nav_weather"
+        android:name="com.example.gopherway.ui.Weather.WeatherFragment"
+        android:label="@string/menu_weather"
+        tools:layout="@layout/fragment_weather" />
 
     <fragment
         android:id="@+id/nav_share"
