--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -17,9 +17,9 @@
             android:icon="@drawable/ic_menu_history"
             android:title="@string/menu_travel_history" />
         <item
-            android:id="@+id/nav_tools"
+            android:id="@+id/nav_weather"
             android:icon="@drawable/ic_menu_manage"
-            android:title="@string/menu_tools" />
+            android:title="@string/menu_weather" />
     </group>
 
     <item android:title="Communicate">
