--- a/app/src/main/res/layout/layout_directions.xml
+++ b/app/src/main/res/layout/layout_directions.xml
@@ -15,7 +15,7 @@
             android:padding="8dp">
 
             <ImageView
-                android:id="@+id/imageView"
+                android:id="@+id/nav_display_picture"
                 android:layout_width="120dp"
                 android:layout_height="90dp"
                 android:padding="4dp" />
@@ -25,7 +25,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="5dp"
-                android:layout_toRightOf="@id/imageView"
+                android:layout_toRightOf="@id/nav_display_picture"
                 android:text="Turn right"
                 android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
                 android:textColor="#000000" />
@@ -37,7 +37,7 @@
                 android:layout_below="@id/textViewDirection"
                 android:layout_marginLeft="5dp"
                 android:layout_marginTop="5dp"
-                android:layout_toRightOf="@id/imageView"
+                android:layout_toRightOf="@id/nav_display_picture"
                 android:text="At intersection"
                 android:textAppearance="@style/Base.TextAppearance.AppCompat.Small" />
 
@@ -48,7 +48,7 @@
                 android:layout_below="@id/textViewShortDesc"
                 android:layout_marginLeft="5dp"
                 android:layout_marginTop="5dp"
-                android:layout_toRightOf="@id/imageView"
+                android:layout_toRightOf="@id/nav_display_picture"
                 android:background="@color/cardview_shadow_end_color"
                 android:paddingLeft="15dp"
                 android:paddingRight="15dp"
