--- a/app/src/main/res/layout/nav_header_main.xml
+++ b/app/src/main/res/layout/nav_header_main.xml
@@ -14,14 +14,15 @@
     android:gravity="bottom">
 
     <ImageView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:paddingTop="@dimen/nav_header_vertical_spacing"
-        app:srcCompat="@mipmap/ic_launcher_round"
+        android:id="@+id/nav_display_picture"
+        android:layout_width="90dp"
+        android:layout_height="90dp"
         android:contentDescription="@string/nav_header_desc"
-        android:id="@+id/imageView" />
+        android:paddingTop="@dimen/nav_header_vertical_spacing"
+        app:srcCompat="@mipmap/ic_launcher_round" />
 
     <TextView
+        android:id="@+id/nav_display_name"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:paddingTop="@dimen/nav_header_vertical_spacing"
@@ -32,6 +33,12 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/nav_header_subtitle"
-        android:id="@+id/textView" />
+        android:id="@+id/nav_display_email" />
+
+    <Button
+        android:id="@+id/nav_sign_out"
+        android:layout_width="wrap_content"
+        android:layout_height="32dp"
+        android:text="Sign Out" />
 
 </LinearLayout>
