--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -20,19 +20,19 @@
             android:id="@+id/nav_tools"
             android:icon="@drawable/ic_menu_manage"
             android:title="@string/menu_tools" />
+<!--        <item-->
+<!--            android:id="@+id/nav_sign_out"-->
+<!--            android:icon="@drawable/ic_menu_share"-->
+<!--            android:title="Sign Out" />-->
     </group>
 
-    <item android:title="Communicate">
-        <menu>
-            <item
-                android:id="@+id/nav_share"
-                android:icon="@drawable/ic_menu_share"
-                android:title="@string/menu_share" />
-            <item
-                android:id="@+id/nav_send"
-                android:icon="@drawable/ic_menu_send"
-                android:title="@string/menu_send" />
-        </menu>
-    </item>
+<!--    <item android:title="TODO">-->
+<!--        <menu>-->
+<!--            <item-->
+<!--                android:id="@+id/nav_sign_out"-->
+<!--                android:icon="@drawable/ic_menu_share"-->
+<!--                android:title="Sign Out" />-->
+<!--        </menu>-->
+<!--    </item>-->
 
 </menu>
