--- a/app/src/main/res/layout/fragment_saved_locations.xml
+++ b/app/src/main/res/layout/fragment_saved_locations.xml
@@ -4,7 +4,8 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent" >
+    android:layout_height="match_parent"
+    tools:context=".RouteListActivity">
 
     <TextView
         android:id="@+id/text_saved_locations"
@@ -20,6 +21,7 @@
         app:layout_constraintTop_toTopOf="parent"/>
 
     <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/routeCard"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         tools:layout_editor_absoluteX="77dp"
