--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -4,13 +4,18 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#5C818080">
+    android:background="#778885">
 
     <Button
         android:id="@+id/button"
         android:layout_width="143dp"
         android:layout_height="62dp"
         android:layout_marginBottom="32dp"
+        android:background="#660014"
+        android:bottomRightRadius="10dp"
+        android:bottomLeftRadius="10dp"
+        android:topLeftRadius="10dp"
+        android:topRightRadius="10dp"
         android:onClick="search"
         android:text="Search"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -34,7 +39,6 @@
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
         android:layout_marginEnd="8dp"
-        android:textAlignment="center"
         android:textSize="20sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -43,10 +47,15 @@
     <Spinner
         android:id="@+id/spinner_start"
         android:layout_width="347dp"
-        android:layout_height="wrap_content"
+        android:layout_height="40dp"
         android:layout_marginBottom="24dp"
+        android:background="#660014"
+        android:bottomLeftRadius="10dp"
+        android:bottomRightRadius="10dp"
         android:entries="@array/buildings"
         android:spinnerMode="dropdown"
+        android:topLeftRadius="10dp"
+        android:topRightRadius="10dp"
         app:layout_constraintBottom_toTopOf="@+id/textView3"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
@@ -54,13 +63,18 @@
     <Spinner
         android:id="@+id/spinner_destination"
         android:layout_width="347dp"
-        android:layout_height="wrap_content"
+        android:layout_height="40dp"
         android:layout_marginStart="32dp"
         android:layout_marginLeft="32dp"
         android:layout_marginEnd="32dp"
         android:layout_marginRight="32dp"
         android:layout_marginBottom="32dp"
+        android:background="#660014"
+        android:bottomLeftRadius="10dp"
+        android:bottomRightRadius="10dp"
         android:entries="@array/buildings"
+        android:topLeftRadius="10dp"
+        android:topRightRadius="10dp"
         app:layout_constraintBottom_toTopOf="@+id/button"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
