--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -1,9 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    tools:showIn="navigation_view">
+    tools:showIn="navigation_view"
+    android:background="#660014">
 
-    <group android:checkableBehavior="single">
+    <group android:checkableBehavior="single"
+        android:background="#660014">
         <item
             android:id="@+id/nav_home"
             android:icon="@drawable/ic_menu_home"
@@ -20,19 +22,5 @@
             android:id="@+id/nav_tools"
             android:icon="@drawable/ic_menu_manage"
             android:title="@string/menu_tools" />
-<!--        <item-->
-<!--            android:id="@+id/nav_sign_out"-->
-<!--            android:icon="@drawable/ic_menu_share"-->
-<!--            android:title="Sign Out" />-->
     </group>
-
-<!--    <item android:title="TODO">-->
-<!--        <menu>-->
-<!--            <item-->
-<!--                android:id="@+id/nav_sign_out"-->
-<!--                android:icon="@drawable/ic_menu_share"-->
-<!--                android:title="Sign Out" />-->
-<!--        </menu>-->
-<!--    </item>-->
-
 </menu>
