--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#8E9796">
+    android:background="@color/cardview_light_background">
 
     <Button
         android:id="@+id/button"
@@ -18,6 +18,7 @@
         android:topRightRadius="10dp"
         android:onClick="search"
         android:text="Search"
+        android:textColor="@color/cardview_light_background"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
@@ -26,6 +27,8 @@
         android:id="@+id/imageView2"
         android:layout_width="285dp"
         android:layout_height="295dp"
+        android:layout_marginBottom="32dp"
+        app:layout_constraintBottom_toTopOf="@+id/spinner_start"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/text_home"
@@ -55,6 +58,7 @@
         android:spinnerMode="dropdown"
         android:topLeftRadius="10dp"
         android:topRightRadius="10dp"
+        android:textColor="@color/cardview_light_background"
         app:layout_constraintBottom_toTopOf="@+id/textView3"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
@@ -74,6 +78,7 @@
         android:entries="@array/buildings"
         android:topLeftRadius="10dp"
         android:topRightRadius="10dp"
+        android:textColor="@color/cardview_light_background"
         app:layout_constraintBottom_toTopOf="@+id/button"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
