--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -18,7 +18,7 @@
             android:title="@string/menu_travel_history" />
         <item
             android:id="@+id/nav_weather"
-            android:icon="@drawable/ic_menu_manage"
+            android:icon="@drawable/flake"
             android:title="@string/menu_weather" />
 <!--        <item-->
 <!--            android:id="@+id/nav_sign_out"-->
