--- a/app/src/main/res/layout/activity_display_navigation_options.xml
+++ b/app/src/main/res/layout/activity_display_navigation_options.xml
@@ -30,14 +30,11 @@
 
     <ImageView
         android:id="@+id/imageView4"
-        android:layout_width="98dp"
-        android:layout_height="109dp"
-        app:layout_constraintBottom_toTopOf="@+id/imageView3"
+        android:layout_width="100dp"
+        android:layout_height="100dp"
+        app:layout_constraintBottom_toBottomOf="@+id/textView2"
         app:layout_constraintEnd_toStartOf="@+id/textView2"
-        app:layout_constraintHorizontal_bias="1.0"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.38"
+        app:layout_constraintTop_toTopOf="@+id/textView2"
         app:srcCompat="?attr/actionBarDivider" />
 
     <ImageButton
