--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -9,29 +9,28 @@
     <Button
         android:id="@+id/button"
         android:layout_width="143dp"
-        android:layout_height="62dp"
+        android:layout_height="45dp"
         android:layout_marginBottom="32dp"
         android:background="#660014"
-        android:bottomRightRadius="10dp"
         android:bottomLeftRadius="10dp"
-        android:topLeftRadius="10dp"
-        android:topRightRadius="10dp"
+        android:bottomRightRadius="10dp"
         android:onClick="search"
         android:text="Search"
         android:textColor="@color/cardview_light_background"
+        android:topLeftRadius="10dp"
+        android:topRightRadius="10dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
 
     <ImageView
         android:id="@+id/imageView2"
-        android:layout_width="285dp"
-        android:layout_height="295dp"
-        android:layout_marginBottom="32dp"
-        app:layout_constraintBottom_toTopOf="@+id/spinner_start"
+        android:layout_width="175dp"
+        android:layout_height="175dp"
+        android:layout_marginBottom="24dp"
+        app:layout_constraintBottom_toTopOf="@+id/textView4"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/text_home"
         app:srcCompat="@drawable/logo" />
 
     <TextView
@@ -49,39 +48,37 @@
     <Spinner
         android:id="@+id/spinner_start"
         android:layout_width="347dp"
-        android:layout_height="40dp"
+        android:layout_height="45dp"
         android:layout_marginBottom="24dp"
         android:background="#660014"
-        android:bottomLeftRadius="10dp"
-        android:bottomRightRadius="10dp"
-        android:entries="@array/buildings"
-        android:spinnerMode="dropdown"
-        android:textColor="#FFFFFF"
-        android:topLeftRadius="10dp"
-        android:topRightRadius="10dp"
         app:layout_constraintBottom_toTopOf="@+id/textView3"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
 
+
     <Spinner
         android:id="@+id/spinner_destination"
         android:layout_width="347dp"
-        android:layout_height="40dp"
+        android:layout_height="45dp"
         android:layout_marginStart="32dp"
         android:layout_marginLeft="32dp"
         android:layout_marginEnd="32dp"
         android:layout_marginRight="32dp"
         android:layout_marginBottom="32dp"
         android:background="#660014"
-        android:bottomLeftRadius="10dp"
-        android:bottomRightRadius="10dp"
-        android:entries="@array/buildings"
-        android:topLeftRadius="10dp"
-        android:topRightRadius="10dp"
-        android:textColor="@color/cardview_light_background"
         app:layout_constraintBottom_toTopOf="@+id/button"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
+
+    <TextView
+        android:id="@+id/textView4"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="24dp"
+        android:text="From"
+        app:layout_constraintBottom_toTopOf="@+id/spinner_start"
+        app:layout_constraintEnd_toEndOf="@+id/textView3"
+        app:layout_constraintStart_toStartOf="@+id/textView3" />
 
     <TextView
         android:id="@+id/textView3"
